Add car model endpoints
